[package]
name = "get-lyrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
miette = { version = "4.7.1", features = ["fancy"] }
thiserror = "1.0.31"
winsafe = { version = "0.0.10", features = ["user", "kernel"] }
